need to finalize css

--- a/template.html
+++ b/template.html
@@ -18,7 +18,22 @@
                       <div class="card">
                         <div class="card-body">
                           <div class="card-header">
-                          <h2 class="card-title">Name</h2>
+                          <h1 class="card-title">Name</h1>
+                          <h4 class="card-text">Manager</h4>
+                        </div>
+                        <ul class="list-group">
+                          <li class="list-group-item">Employee ID:</li>
+                          <li class="list-group-item">Email:</li>
+                          <li class="list-group-item">Office Number:</li>
+                        </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="card">
+                        <div class="card-body">
+                          <div class="card-header">
+                          <h1 class="card-title">Name</h1>
                           <h4 class="card-text">Manager</h4>
                         </div>
                         <ul class="list-group">
@@ -33,22 +48,7 @@
                       <div class="card">
                         <div class="card-body">
                           <div class="card-header">
-                          <h2 class="card-title">Name</h2>
-                          <h4 class="card-text">Manager</h4>
-                        </div>
-                        <ul class="list-group">
-                          <li class="list-group-item">Employee ID:</li>
-                          <li class="list-group-item">Email:</li>
-                          <li class="list-group-item">Morbi leo risus</li>
-                        </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-4">
-                      <div class="card">
-                        <div class="card-body">
-                          <div class="card-header">
-                          <h2 class="card-title">Name</h2>
+                          <h1 class="card-title">Name</h1>
                           <h4 class="card-text">Manager</h4>
                         </div>
                         <ul class="list-group">
@@ -65,7 +65,7 @@
                     <div class="card">
                       <div class="card-body">
                         <div class="card-header">
-                        <h2 class="card-title">Name</h2>
+                        <h1 class="card-title">Name</h1>
                         <h4 class="card-text">Manager</h4>
                       </div>
                       <ul class="list-group">
@@ -80,7 +80,7 @@
                       <div class="card">
                         <div class="card-body">
                           <div class="card-header">
-                          <h2 class="card-title">Name</h2>
+                          <h1 class="card-title">Name</h1>
                           <h4 class="card-text">Manager</h4>
                         </div>
                         <ul class="list-group">
